tooling/lsp-server/examples/errors/quantify_anchor.strl
# Error Example: Cannot Quantify Anchor
# Expected: Error at line 4, character 1
# Message: "Cannot quantify anchor"

^*